--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,16 @@ java {
 
 repositories {
     mavenCentral()
+//    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
+//    implementation 'com.github.D-zerato:shared-java:'
+
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'org.apache.commons:commons-collections4:4.4'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
     compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor("org.projectlombok:lombok:1.18.24")
 }
