--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ repositories {
 dependencies {
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'org.apache.commons:commons-collections4:4.4'
+    implementation('com.querydsl:querydsl-core:5.0.0')
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
     compileOnly 'org.projectlombok:lombok:1.18.24'
